--- a/Day-1-Expanding-Cards/index.html
+++ b/Day-1-Expanding-Cards/index.html
@@ -8,11 +8,37 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
-    <title>Document</title>
+    <title>Expanding Cards</title>
 </head>
 
 <body>
-    <h1>Project Starter</h1>
+    <div class="container">
+        <div class="panel active"
+            style="background-image: url('https://images.unsplash.com/photo-1542751371-adc38448a05e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80')">
+            <h3>Explore The World</h3>
+        </div>
+
+        <div class="panel"
+            style="background-image: url('https://images.unsplash.com/photo-1535223289827-42f1e9919769?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=634&q=80')">
+            <h3>Of Gaming</h3>
+        </div>
+
+        <div class="panel"
+            style="background-image: url('https://images.unsplash.com/photo-1534488972407-5a4aa1e47d83?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=709&q=80')">
+            <h3>Explore The World</h3>
+        </div>
+
+        <div class="panel"
+            style="background-image: url('https://images.unsplash.com/photo-1534620780923-1ce0db377c3f?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=700&q=80')">
+            <h3>Explore The World</h3>
+        </div>
+
+        <div class="panel"
+            style="background-image: url('https://images.unsplash.com/photo-1575291786213-f932b9d57c25?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=80')">
+            <h3>Explore The World</h3>
+        </div>
+
+    </div>
 
     <script src="script.js"></script>
 </body>
