--- a/Day-8-Form-Wave/index.html
+++ b/Day-8-Form-Wave/index.html
@@ -8,11 +8,26 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
-    <title>Document</title>
+    <title>Form Input Wave</title>
 </head>
 
 <body>
-    <h1>Project Starter</h1>
+    <div class="container">
+        <h1>Please Login</h1>
+        <form action="">
+            <div class="form-control">
+                <input type="text" required>
+                <label>Email</label>
+            </div>
+
+            <div class="form-control">
+                <input type="password" required>
+                <label>Password</label>
+            </div>
+            <button class="btn">Login</button>
+            <p class="text">Don't have an account? <a href="#">Register</a></p>
+        </form>
+    </div>
     <script src="script.js"></script>
 </body>
 
