--- a/Day-9-Soundboard/index.html
+++ b/Day-9-Soundboard/index.html
@@ -8,11 +8,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
-    <title>Document</title>
+    <title>Soundboard</title>
 </head>
 
 <body>
-    <h1>Project Starter</h1>
+    <audio id='applause' src="sounds/applause.mp3"></audio>
+    <audio id='boo' src="sounds/boo.mp3"></audio>
+    <audio id='gasp' src="sounds/gasp.mp3"></audio>
+    <audio id='tada' src="sounds/tada.mp3"></audio>
+    <audio id='victory' src="sounds/victory.mp3"></audio>
+    <audio id='wrong' src="sounds/wrong.mp3"></audio>
+    <div id="buttons"></div>
+
     <script src="script.js"></script>
 </body>
 
