--- a/Day-10-Dad-Jokes/index.html
+++ b/Day-10-Dad-Jokes/index.html
@@ -8,11 +8,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
-    <title>Document</title>
+    <title>Dad Jokes</title>
 </head>
 
 <body>
-    <h1>Project Starter</h1>
+    <div class="container">
+        <h3>Don't Laugh Challenge</h3>
+        <div id="joke" class="joke">
+            //joke goes here
+        </div>
+        <button id="jokeBtn" class="btn">Get Another Joke</button>
+    </div>
     <script src="script.js"></script>
 </body>
 
