--- a/Project_starter/index.html
+++ b/Project_starter/index.html
@@ -8,15 +8,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
-    <title>Event Keycodes</title>
+    <title>Document</title>
 </head>
 
 <body>
-    <div id="insert">
-        <div class="key">
-            Press any key to get the keyCode
-        </div>`
-    </div>
+    <h1>project starter</h1>
     <script src="script.js"></script>
 </body>
 
