--- a/Day-12-FAQ-Collapse/index.html
+++ b/Day-12-FAQ-Collapse/index.html
@@ -22,7 +22,7 @@
                 They make up everything!
             </p>
 
-            <button>
+            <button class='faq-toggle'>
                 <i class="fas fa-chevron-down"></i>
                 <i class="fas fa-times"></i>
             </button>
@@ -36,7 +36,7 @@
                 Nobody knows.
             </p>
 
-            <button>
+            <button class='faq-toggle'>
                 <i class="fas fa-chevron-down"></i>
                 <i class="fas fa-times"></i>
             </button>
@@ -50,7 +50,7 @@
                 Inheritance
             </p>
 
-            <button>
+            <button class='faq-toggle'>
                 <i class="fas fa-chevron-down"></i>
                 <i class="fas fa-times"></i>
             </button>
@@ -64,7 +64,7 @@
                 Ten-tickles!
             </p>
 
-            <button>
+            <button class='faq-toggle'>
                 <i class="fas fa-chevron-down"></i>
                 <i class="fas fa-times"></i>
             </button>
@@ -78,7 +78,7 @@
                 Depends on who you are asking.
             </p>
 
-            <button>
+            <button class='faq-toggle'>
                 <i class="fas fa-chevron-down"></i>
                 <i class="fas fa-times"></i>
             </button>
