--- a/Day-13-Random-choice-Picker/index.html
+++ b/Day-13-Random-choice-Picker/index.html
@@ -8,11 +8,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
-    <title>Document</title>
+    <title>Random Choice Picker</title>
 </head>
 
 <body>
-    <h1>project starter</h1>
+    <div class="container">
+        <h3>Enter all of the choices divided by a comma (','')
+            <br> Press Enter when you are done</h3>
+        <textarea id="textarea" placeholder="Enter choices here..."></textarea>
+        <div id="tags"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 
