--- a/Day-13-Random-choice-Picker/index.html
+++ b/Day-13-Random-choice-Picker/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container">
-        <h3>Enter all of the choices divided by a comma (','')
+        <h3>Enter all of the choices divided by a comma (',')
             <br> Press Enter when you are done</h3>
         <textarea id="textarea" placeholder="Enter choices here..."></textarea>
         <div id="tags"></div>
