--- a/Day-14-Animated-Nav/index.html
+++ b/Day-14-Animated-Nav/index.html
@@ -8,11 +8,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
-    <title>Document</title>
+    <title>Animated Nav</title>
 </head>
 
 <body>
-    <h1>project starter</h1>
+    <nav class="active" id="nav">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Works</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+        <button class="icon" id='toggle'>
+            <div class="line line1"></div>
+            <div class="line line2"></div>
+        </button>
+    </nav>
     <script src="script.js"></script>
 </body>
 
