--- a/Day-15-Increment-Counter/index.html
+++ b/Day-15-Increment-Counter/index.html
@@ -8,11 +8,27 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
-    <title>Document</title>
+    <title>Incrementing Counter</title>
 </head>
 
 <body>
-    <h1>project starter</h1>
+    <div class="counter-container">
+        <i class="fab fa-twitter fa-3x"></i>
+        <div class="counter" data-target="12000"></div>
+        <span>Twitter Followers</span>
+    </div>
+
+    <div class="counter-container">
+        <i class="fab fa-youtube fa-3x"></i>
+        <div class="counter" data-target="6000"></div>
+        <span>Youtube Subscribers</span>
+    </div>
+
+    <div class="counter-container">
+        <i class="fab fa-facebook fa-3x"></i>
+        <div class="counter" data-target="7800"></div>
+        <span>Facebook Fans</span>
+    </div>
     <script src="script.js"></script>
 </body>
 
