--- a/Day-18-Background-Slider/index.html
+++ b/Day-18-Background-Slider/index.html
@@ -8,11 +8,34 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
-    <title>Document</title>
+    <title>Background Slider</title>
 </head>
 
 <body>
-    <h1>project starter</h1>
+    <div class="slider-container">
+        <div class="slide active"
+            style='background-image: url("https://images.unsplash.com/photo-1542902093-d55926049754?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80");'>
+        </div>
+        <div class="slide"
+            style="background-image: url('https://images.unsplash.com/photo-1542642839-83adadcbe645?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1181&q=80');">
+        </div>
+        <div class="slide"
+            style="background-image: url('https://images.unsplash.com/photo-1586165877141-3dbcfc059283?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1234&q=80');">
+        </div>
+        <div class="slide"
+            style="background-image: url('https://images.unsplash.com/photo-1606152537426-33511d5b079d?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=80');">
+        </div>
+        <div class="slide"
+            style="background-image: url('https://images.unsplash.com/photo-1610923686034-98f5730bb317?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');">
+        </div>
+        <button class="arrow left-arrow" id="left">
+            <i class="fas fa-arrow-left"></i>
+        </button>
+
+        <button class="arrow right-arrow" id="right">
+            <i class="fas fa-arrow-right"></i>
+        </button>
+    </div>
     <script src="script.js"></script>
 </body>
 
