--- a/Day-19-Theme-Clock/index.html
+++ b/Day-19-Theme-Clock/index.html
@@ -8,11 +8,23 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
-    <title>Document</title>
+    <title>Theme Clock</title>
 </head>
 
 <body>
-    <h1>project starter</h1>
+
+    <button class="toggle">Dark Mode</button>
+
+    <div class="clock-container">
+        <div class="clock">
+            <div class="needle hour"></div>
+            <div class="needle minute"></div>
+            <div class="needle second"></div>
+            <div class="center-point"></div>
+        </div>
+        <div class="time"></div>
+        <div class="date"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 
