--- a/Day-20-Button-Ripple/index.html
+++ b/Day-20-Button-Ripple/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
-    <title>Document</title>
+    <title>Button Ripple Effect</title>
 </head>
 
 <body>
-    <h1>project starter</h1>
+    <button class="ripple">Click Me</button>
     <script src="script.js"></script>
 </body>
 
