--- a/Day-24-Content-Placeholder/index.html
+++ b/Day-24-Content-Placeholder/index.html
@@ -8,11 +8,34 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
-    <title>Document</title>
+    <title>Content Placeholder</title>
 </head>
 
 <body>
-    <h1>project starter</h1>
+    <div class="card">
+        <div class="card-header animated-bg" id="header">
+            &nbsp;
+        </div>
+
+        <div class="card-content">
+            <h3 class="card-title animated-bg animated-bg-text" id="title">&nbsp;</h3>
+            <p class="card-excerpt" id="excerpt">
+                &nbsp;
+                <span class="animated-bg animated-bg-text">&nbsp;</span>
+                <span class="animated-bg animated-bg-text">&nbsp;</span>
+                <span class="animated-bg animated-bg-text">&nbsp;</span>
+            </p>
+            <div class="author">
+                <div class="profile-img animated-bg" id="profile_img">
+                    &nbsp;
+                </div>
+                <div class="author-info">
+                    <strong class="animated-bg animated-bg-text" id="name">&nbsp;</strong>
+                    <small class="animated-bg animated-bg-text" id="date">&nbsp;</small>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 
