--- a/Day-25-Sticky-Navbar/index.html
+++ b/Day-25-Sticky-Navbar/index.html
@@ -8,11 +8,48 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
-    <title>Document</title>
+    <title>Sticky Navbar</title>
 </head>
 
 <body>
-    <h1>project starter</h1>
+    <nav class="nav">
+        <div class="container">
+            <h1 class="logo"><a href="/index.html">My Website</a></h1>
+            <ul>
+                <li><a href="#" class="current">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="hero">
+        <div class="container">
+            <h1>Welcome to my website</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, eveniet.</p>
+        </div>
+    </div>
+    <section class="container content">
+        <h2>Content One</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio est perferendis pariatur quaerat! Aperiam
+            quas facere tempore quam atque enim quod commodi doloribus pariatur tempora fuga illo animi autem minus
+            architecto perspiciatis tenetur, earum iste hic magni ad laudantium illum quia. Nisi, accusamus cumque illo
+            eaque aliquam eligendi magni quaerat facilis, ad optio expedita iusto sequi pariatur, repudiandae in placeat
+            cum eum atque. Omnis dolorem perferendis a reprehenderit vel! Asperiores, eligendi ullam vel saepe nobis
+            adipisci ipsum. Unde voluptatibus dolores cupiditate. Inventore et explicabo, expedita vel consequatur vitae
+            illo, error, ratione repellendus provident ab ullam soluta saepe ex. Consequuntur, rerum.</p>
+
+        <h2>Content Two</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio est perferendis pariatur quaerat! Aperiam
+            quas facere tempore quam atque enim quod commodi doloribus pariatur tempora fuga illo animi autem minus
+            architecto perspiciatis tenetur, earum iste hic magni ad laudantium illum quia. Nisi, accusamus cumque illo
+            eaque aliquam eligendi magni quaerat facilis, ad optio expedita iusto sequi pariatur, repudiandae in placeat
+            cum eum atque. Omnis dolorem perferendis a reprehenderit vel! Asperiores, eligendi ullam vel saepe nobis
+            adipisci ipsum. Unde voluptatibus dolores cupiditate. Inventore et explicabo, expedita vel consequatur vitae
+            illo, error, ratione repellendus provident ab ullam soluta saepe ex. Consequuntur, rerum.</p>
+    </section>
+
     <script src="script.js"></script>
 </body>
 
