--- a/Day-26-Double-Vertical-Slider/index.html
+++ b/Day-26-Double-Vertical-Slider/index.html
@@ -8,11 +8,58 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
-    <title>Document</title>
+    <title>Vertical Slider</title>
 </head>
 
 <body>
-    <h1>project starter</h1>
+    <div class="slider-container">
+        <div class="left-slide">
+            <div style='background-color: #FD3555;'>
+                <h1>Nature Flower</h1>
+                <p>all in pink</p>
+            </div>
+
+            <div style='background-color: #2A86BA;'>
+                <h1>Blue Sky</h1>
+                <p>with it's mountains</p>
+            </div>
+
+            <div style='background-color: #252E33;'>
+                <h1>Lonely Castle</h1>
+                <p>in the wilderness</p>
+            </div>
+
+            <div style='background-color: #FFB866;'>
+                <h1>Flying eagle</h1>
+                <p>in the sunset</p>
+            </div>
+        </div>
+        <div class="right-slide">
+            <div
+                style="background-image: url('https://images.unsplash.com/photo-1508768787810-6adc1f613514?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80');">
+            </div>
+
+            <div
+                style="background-image: url('https://images.unsplash.com/photo-1598261366156-179e7d88d2e9?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1189&q=80');">
+            </div>
+
+            <div
+                style="background-image: url('https://images.unsplash.com/photo-1505855265981-d52719d1f64e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=701&q=80');">
+            </div>
+            <div
+                style="background-image: url('https://images.unsplash.com/photo-1534211698458-e2be12c1a94c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=430&q=80');">
+            </div>
+
+        </div>
+        <div class="action-buttons">
+            <button class="down-button">
+                <i class="fas fa-arrow-down"></i>
+            </button>
+            <button class="up-button">
+                <i class="fas fa-arrow-up"></i>
+            </button>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 
