--- a/Day-27-Toast-Notification/index.html
+++ b/Day-27-Toast-Notification/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
-    <title>Document</title>
+    <title>Toast Notification</title>
 </head>
 
 <body>
-    <h1>project starter</h1>
+    <div id="toasts"></div>
+    <button class="btn" id="button">Show Notifications</button>
     <script src="script.js"></script>
 </body>
 
