--- a/Day-29-Double-Heart-click/index.html
+++ b/Day-29-Double-Heart-click/index.html
@@ -8,11 +8,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
-    <title>Document</title>
+    <title>Double Click Heart</title>
 </head>
 
 <body>
-    <h1>project starter</h1>
+    <h3>Double click on the image to <i class="fas fa-heart"></i> it</h3>
+    <small>You liked it <span id='times'>0</span> times</small>
+
+    <div class="loveMe"></div>
+
     <script src="script.js"></script>
 </body>
 
