completed note taker app

--- a/Day-33-Notes-App/index.html
+++ b/Day-33-Notes-App/index.html
@@ -12,7 +12,12 @@
 </head>
 
 <body>
-    <h1>project starter</h1>
+    <button class="add" id="add">
+        <i class="fas fa-plus"></i> Add Note
+    </button>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/2.0.0/marked.min.js"></script>
     <script src="script.js"></script>
 </body>
 
