--- a/Day-34-AnimatedCountdown/index.html
+++ b/Day-34-AnimatedCountdown/index.html
@@ -8,11 +8,24 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
-    <title>Document</title>
+    <title>Animated Countdown</title>
 </head>
 
 <body>
-    <h1>project starter</h1>
+    <div class="counter">
+        <div class="nums">
+            <span class="in">3</span>
+            <span>2</span>
+            <span>1</span>
+            <span>0</span>
+        </div>
+        <h4>Get Ready</h4>
+    </div>
+
+    <div class="final">
+        <h1>GO!</h1>
+        <button id="replay">Replay</button>
+    </div>
     <script src="script.js"></script>
 </body>
 
