--- a/Day-35-Image-Carousel/index.html
+++ b/Day-35-Image-Carousel/index.html
@@ -8,11 +8,27 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
-    <title>Document</title>
+    <title>Image Carousel</title>
 </head>
 
 <body>
-    <h1>project starter</h1>
+    <div class="carousel">
+        <div class="image-container" id='imgs'>
+            <img src="https://images.unsplash.com/photo-1533117514952-a3cfdbb7f986?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=80"
+                alt="first image">
+            <img src="https://images.unsplash.com/photo-1532882014483-19ff9aa7c956?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1065&q=80"
+                alt="second image">
+            <img src="https://images.unsplash.com/photo-1534054923604-d8c3f5949f62?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+                alt="third image">
+            <img src="https://images.unsplash.com/photo-1533003505519-6a9b92ed4911?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=80"
+                alt="fourth image">
+        </div>
+
+        <div class="buttons-container">
+            <button class="btn" id="left">Prev</button>
+            <button class='btn' id="right">Next</button>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 
