--- a/Day-38-Mobile-Tab-Nav/index.html
+++ b/Day-38-Mobile-Tab-Nav/index.html
@@ -8,11 +8,40 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
-    <title>Document</title>
+    <title>Mobile Tab Navigation</title>
 </head>
 
 <body>
-    <h1>project starter</h1>
+    <div class="phone">
+        <img src="https://images.unsplash.com/photo-1560026301-88340cf16be7?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTd8fGhvdXNlfGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=60"
+            alt="home" class="content show">
+        <img src="https://images.unsplash.com/photo-1497032628192-86f99bcd76bc?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"
+            alt="work" class="content">
+        <img src="https://images.unsplash.com/photo-1519337265831-281ec6cc8514?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"
+            alt="blog" class="content">
+        <img src="https://images.unsplash.com/photo-1455849318743-b2233052fcff?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8YWJvdXR8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=60"
+            alt="about" class="content">
+        <nav>
+            <ul>
+                <li class="active">
+                    <i class="fas fa-home"></i>
+                    <p>Home</p>
+                </li>
+                <li>
+                    <i class="fas fa-box"></i>
+                    <p>Work</p>
+                </li>
+                <li>
+                    <i class="fas fa-book-open"></i>
+                    <p>Blog</p>
+                </li>
+                <li>
+                    <i class="fas fa-users"></i>
+                    <p>About Us</p>
+                </li>
+            </ul>
+        </nav>
+    </div>
     <script src="script.js"></script>
 </body>
 
