--- a/index.html
+++ b/index.html
@@ -13,42 +13,43 @@
 
 <body>
     <h1>50 Projects in 50 Days</h1>
+
     <div class="projects-container">
         <a href="/Day-1-Expanding-Cards/index.html" class="project-card">
-            <h2>Day 1: Expanding Cards</h2>
+            <h2 class="title">Day-1</h2>
+        </a>
+
+        <a href="/Day-2-Progress-Steps/index.html" class="project-card">
+            <h2 class="title">Day-2</h2>
         </a>
 
         <div class="project-card">
-            <h2><a href="/Day-2-Progress-Steps/index.html">Day 2: Progress Steps</a></h2>
+            <h2 class="title"><a href="/Day-3-Rotating-Nav/index.html">Day-3</a></h2>
+        </div>
+
+        <!-- <div class="project-card">
+            <h2 class="title"><a href="/Day-4-Hidden-Search-Widget/index.html">Day 4</a></h2>
         </div>
 
         <div class="project-card">
-            <h2><a href="/Day-3-Rotating-Nav/index.html">Day 3: Rotating Nav</a></h2>
+            <h2 class="title"><a href="/Day-5-Blurry-Image/index.html">Day 5</a></h2>
         </div>
 
         <div class="project-card">
-            <h2><a href="/Day-4-Hidden-Search-Widget/index.html">Day 4 : Hidden Search Widget</a></h2>
+            <h2 class="title"><a href="/Day-6-Scroll-Animate/index.html">Day 6</a></h2>
         </div>
 
         <div class="project-card">
-            <h2><a href="/Day-5-Blurry-Image/index.html">Day 5: Blurry Image</a></h2>
+            <h2 class="title"><a href="/Day-7-Split-LandingPage/index.html">Day 7</a></h2>
         </div>
 
         <div class="project-card">
-            <h2><a href="/Day-6-Scroll-Animate/index.html">Day 6: Scroll Animate</a></h2>
+            <h2 class="title"><a href="/Day-8-Form-Wave/index.html">Day 8</a></h2>
         </div>
 
         <div class="project-card">
-            <h2><a href="/Day-7-Split-LandingPage/index.html">Day 7: Split Landing Page</a></h2>
-        </div>
-
-        <div class="project-card">
-            <h2><a href="/Day-8-Form-Wave/index.html">Day 8: Form Wave</a></h2>
-        </div>
-
-        <div class="project-card">
-            <h2><a href="/Day-9-Soundboard/index.html">Day 9: Soundboard</a></h2>
-        </div>
+            <h2 class="title"><a href="/Day-9-Soundboard/index.html">Day 9</a></h2>
+        </div> -->
     </div>
 </body>
 
