--- a/Day-40-3DBackground/index.html
+++ b/Day-40-3DBackground/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
-    <title>Document</title>
+    <title>3D Background Boxes</title>
 </head>
 
 <body>
-    <h1>project starter</h1>
+    <button id="btn" class="magic">Magic</button>
+    <div id="boxes" class="boxes"></div>
+
     <script src="script.js"></script>
 </body>
 
