--- a/Day-41-Verify-Account/index.html
+++ b/Day-41-Verify-Account/index.html
@@ -8,11 +8,27 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
-    <title>Document</title>
+    <title>Verify Account</title>
 </head>
 
 <body>
-    <h1>project starter</h1>
+    <div class="container">
+        <h2>Verify your Account</h2>
+        <p>We emailed you a six digit code to someone@gmail.com <br> Enter the code below
+            to comfirm your email address.
+        </p>
+        <div class="code-container">
+            <input type="number" class="code" placeholder="0" min="0" max="9" required>
+            <input type="number" class="code" placeholder="0" min="0" max="9" required>
+            <input type="number" class="code" placeholder="0" min="0" max="9" required>
+            <input type="number" class="code" placeholder="0" min="0" max="9" required>
+            <input type="number" class="code" placeholder="0" min="0" max="9" required>
+            <input type="number" class="code" placeholder="0" min="0" max="9" required>
+        </div>
+        <small class="info">
+            This is the design only. We do not actually take your email.
+        </small>
+    </div>
     <script src="script.js"></script>
 </body>
 
