--- a/Day-42-Live-user-filter/index.html
+++ b/Day-42-Live-user-filter/index.html
@@ -8,11 +8,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
-    <title>Document</title>
+    <title>Live User Filter</title>
 </head>
 
 <body>
-    <h1>project starter</h1>
+    <div class="container">
+        <header class="header">
+            <h4 class="title">Live User Filter</h4>
+            <small class="subtitle">Search by name and/or location</small>
+            <input type="text" id="filter" placeholder="search">
+        </header>
+        <ul id="result" class="user-list">
+            <li>
+                <h3>loading...</h3>
+            </li>
+        </ul>
+    </div>
     <script src="script.js"></script>
 </body>
 
