updated feedback ui

--- a/Day-43-Feedback-UI/index.html
+++ b/Day-43-Feedback-UI/index.html
@@ -8,11 +8,31 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
-    <title>Document</title>
+    <title>Let Us Know Your Feedback</title>
 </head>
 
 <body>
-    <h1>project starter</h1>
+    <div id="panel" class="panel-container">
+        <strong>How Satisfied are you with our <br> customer support performance?</strong>
+        <div class="ratings-container">
+            <div class="rating">
+                <img src="https://www.flaticon.com/svg/187/187150.svg" alt="Unhappy">
+                <small>Unhappy</small>
+            </div>
+
+            <div class="rating">
+                <img src="https://www.flaticon.com/svg/187/187136.svg" alt="Neutral">
+                <small>Neutral</small>
+            </div>
+
+            <div class="rating active">
+                <img src="https://www.flaticon.com/svg/187/187133.svg" alt="Satisfied">
+                <small>Satisfied</small>
+            </div>
+
+        </div>
+        <button class="btn" id="send">Send Review</button>
+    </div>
     <script src="script.js"></script>
 </body>
 
