--- a/Day-44-Custom-Range-Slider/index.html
+++ b/Day-44-Custom-Range-Slider/index.html
@@ -8,11 +8,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
-    <title>Document</title>
+    <title>Custom Range Slider</title>
 </head>
 
 <body>
-    <h1>project starter</h1>
+    <h2>Customer Range Slider</h2>
+    <div class="range-container">
+        <input type="range" id="range" min="0" max="100">
+        <label for="range">50</label>
+    </div>
     <script src="script.js"></script>
 </body>
 
