--- a/Day-45-Netflix-Nav/index.html
+++ b/Day-45-Netflix-Nav/index.html
@@ -8,11 +8,46 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
-    <title>Document</title>
+    <title>Netflix Mobile Nav</title>
 </head>
 
 <body>
-    <h1>project starter</h1>
+    <button class="nav-btn open-btn">
+        <i class="fas fa-bars"></i>
+    </button>
+
+    <img src="https://static.wikia.nocookie.net/dynastytv/images/5/54/Netflix_logo.png/revision/latest?cb=20171022162747"
+        class="logo" alt="logo">
+
+    <p class="text">Mobile Navigation</p>
+
+    <div class="nav nav-black">
+        <div class="nav nav-red">
+            <div class="nav nav-white">
+                <button class="nav-btn close-btn">
+                    <i class="fas fa-times"></i>
+                </button>
+                <img src="https://static.wikia.nocookie.net/dynastytv/images/5/54/Netflix_logo.png/revision/latest?cb=20171022162747"
+                    class="logo" alt="logo">
+
+                <ul class="list">
+                    <li><a href="#">Teams</a></li>
+                    <li><a href="#">Locations</a></li>
+                    <li><a href="#">Life at Netflix</a></li>
+                    <li>
+                        <ul>
+                            <li><a href="#">Netflix culture memos</a></li>
+                            <li><a href="#">Work</a></li>
+                            <li><a href="#">Work Life Balance</a></li>
+                            <li><a href="#">Inclusion & Diversity</a></li>
+                            <li><a href="#">Blog</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 
