--- a/Day-47-Testimonial-box/index.html
+++ b/Day-47-Testimonial-box/index.html
@@ -8,11 +8,27 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
-    <title>Document</title>
+    <title>Testimonial Box</title>
 </head>
 
 <body>
-    <h1>project starter</h1>
+    <div class="testimonial-container">
+        <div class="progress-bar"></div>
+        <div class="fas fa-quote-left fa-quote"></div>
+        <div class="fas fa-quote-right fa-quote"></div>
+        <p class="testimonial">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae praesentium deleniti adipisci dolore
+            similique veritatis perspiciatis accusamus molestias suscipit quod doloremque aut, sunt ab? Aliquam facere
+            accusantium omnis perferendis et!
+        </p>
+        <div class="user">
+            <img src="https://randomuser.me/api/portraits/women/46.jpg" alt="user" class="user-image">
+            <div class="user-details">
+                <h4 class="username">Maya Smith</h4>
+                <p class="role">Marketing</p>
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 
